--- a/publications.bib
+++ b/publications.bib
@@ -5,7 +5,12 @@
     archivePrefix = "arXiv",
     primaryClass = "hep-ph",
     month = "12",
-    year = "2024"
+    year = "2024",
+    abstract = "Neural networks for LHC physics have to be accurate, reliable, and controlled. 
+    Using surrogate loop amplitudes as a use case, we first show how activation functions can be systematically tested with KANs. 
+    For reliability and control, we learn uncertainties together with the target amplitude over phase space. 
+    Systematic uncertainties can be learned by a heteroscedastic loss, but a comprehensive learned uncertainty requires Bayesian networks or repulsive ensembles. 
+    We compute pull distributions to show to what level learned uncertainties are calibrated correctly for cutting-edge precision surrogates."
 }
 
 @article{Heimel:2024wph,
