--- a/publications.bib
+++ b/publications.bib
@@ -1,3 +1,14 @@
+@article{Krause:2025qnl,
+    author = "Krause, Claudius and Wang, Daohan and Winterhalder, Ramon",
+    title = "{BitHEP -- The Limits of Low-Precision ML in HEP}",
+    eprint = "2504.03387",
+    archivePrefix = "arXiv",
+    primaryClass = "cs.LG",
+    reportNumber = "HEPHY-ML-25-02",
+    month = "4",
+    year = "2025"
+}
+
 @article{Bahl:2024gyt,
     author = "Bahl, Henning and Elmer, Nina and Favaro, Luigi and Hau\ss{}mann, Manuel and Plehn, Tilman and Winterhalder, Ramon",
     title = "{Accurate Surrogate Amplitudes with Calibrated Uncertainties}",
