--- a/content/publication/krause-2025-qnl/cite.bib
+++ b/content/publication/krause-2025-qnl/cite.bib
@@ -5,6 +5,6 @@
  month = {4},
  primaryclass = {cs.LG},
  reportnumber = {HEPHY-ML-25-02},
- title = {BitHEP -- The Limits of Low-Precision ML in HEP},
+ title = {BitHEP - The Limits of Low-Precision ML in HEP},
  year = {2025}
 }
