--- a/publications.bib
+++ b/publications.bib
@@ -1,3 +1,14 @@
+@article{Vent:2025ddm,
+    author = "Vent, Sophia and Winterhalder, Ramon and Plehn, Tilman",
+    title = "{How to Deep-Learn the Theory behind Quark-Gluon Tagging}",
+    eprint = "2507.21214",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "TIF-UNIMI-2025-16",
+    month = "7",
+    year = "2025"
+}
+
 @article{Krause:2025qnl,
     author = "Krause, Claudius and Wang, Daohan and Winterhalder, Ramon",
     title = "{BitHEP -- The Limits of Low-Precision ML in HEP}",
