--- a/publications.bib
+++ b/publications.bib
@@ -37,8 +37,12 @@
     archivePrefix = "arXiv",
     primaryClass = "hep-ph",
     reportNumber = "IRMP-CP3-24-23",
-    month = "8",
-    year = "2024"
+    doi = "10.21468/SciPostPhys.18.1.017",
+    journal = "SciPost Phys.",
+    volume = "18",
+    number = "1",
+    pages = "017",
+    year = "2025"
 }
 
 @article{Dittmaier:2024gwr,
@@ -72,13 +76,17 @@
 
 @article{Heimel:2023mvw,
     author = "Heimel, Theo and Huetsch, Nathan and Winterhalder, Ramon and Plehn, Tilman and Butter, Anja",
-    title = "{Precision-Machine Learning for the Matrix Element Method}",
+    title = "{Precision-machine learning for the matrix element method}",
     eprint = "2310.07752",
     archivePrefix = "arXiv",
     primaryClass = "hep-ph",
     reportNumber = "IRMP-CP3-23-55",
-    month = "10",
-    year = "2023"
+    doi = "10.21468/SciPostPhys.17.5.129",
+    journal = "SciPost Phys.",
+    volume = "17",
+    number = "5",
+    pages = "129",
+    year = "2024"
 }
 
 @article{Dittmaier:2023nac,
