--- a/content/publication/heimel-2023-mvw/cite.bib
+++ b/content/publication/heimel-2023-mvw/cite.bib
@@ -1,10 +1,14 @@
-@article{Heimel:2023mvw,
- archiveprefix = {arXiv},
- author = {Heimel, Theo and Huetsch, Nathan and Winterhalder, Ramon and Plehn, Tilman and Butter, Anja},
- eprint = {2310.07752},
- month = {10},
- primaryclass = {hep-ph},
- reportnumber = {IRMP-CP3-23-55},
- title = {Precision-Machine Learning for the Matrix Element Method},
- year = {2023}
+@article{Heimel:2023ngj,
+    author = "Heimel, Theo and Huetsch, Nathan and Maltoni, Fabio and Mattelaer, Olivier and Plehn, Tilman and Winterhalder, Ramon",
+    title = "{The MadNIS reloaded}",
+    eprint = "2311.01548",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "IRMP-CP3-23-56, MCNET-23-12",
+    doi = "10.21468/SciPostPhys.17.1.023",
+    journal = "SciPost Phys.",
+    volume = "17",
+    number = "1",
+    pages = "023",
+    year = "2024"
 }
