--- a/content/publication/heimel-2024-wph/cite.bib
+++ b/content/publication/heimel-2024-wph/cite.bib
@@ -1,10 +1,14 @@
 @article{Heimel:2024wph,
- archiveprefix = {arXiv},
- author = {Heimel, Theo and Mattelaer, Olivier and Plehn, Tilman and Winterhalder, Ramon},
- eprint = {2408.01486},
- month = {8},
- primaryclass = {hep-ph},
- reportnumber = {IRMP-CP3-24-23},
- title = {Differentiable MadNIS-Lite},
- year = {2024}
+    author = "Heimel, Theo and Mattelaer, Olivier and Plehn, Tilman and Winterhalder, Ramon",
+    title = "{Differentiable MadNIS-Lite}",
+    eprint = "2408.01486",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "IRMP-CP3-24-23",
+    doi = "10.21468/SciPostPhys.18.1.017",
+    journal = "SciPost Phys.",
+    volume = "18",
+    number = "1",
+    pages = "017",
+    year = "2025"
 }
